# prettymaps-guessr-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
api/: __init__.py  api.py  models.py  pm.py
tests/: __init__.py  test_api.py
