[tool.poetry]
name = "prettymaps-guessr-api"
version = "0.1.0"
description = ""
authors = ["GA <contact@guilhemallaman.net>"]
readme = "README.md"
packages = [{include = "prettymaps_guessr_api"}]

[tool.poetry.dependencies]
python = "^3.10"
prettymaps = "^1.0.0"
shapely = "^1.8.5"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
